# fastapi-boilerplate

./: .env-example  .gitignore  README.md  pyproject.toml
app/: __init__.py
app/ext/: oauth.py
app/models/: __init__.py  user.py
app/routes/: user.py
app/schemas/: authentication.py  user.py
app/services/: authentication.py  user.py
