[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A simple FastAPI boilerplate"
authors = ["Urich Oliveira"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
dynaconf = "^3.1.2"
python-jose = "^3.2.0"
SQLAlchemy = "^1.3.22"
passlib = "^1.7.4"
arrow = "^0.17.0"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
